--- a/src/main/resources/templates/JYPages/jyBoardPages/jyBoardDetail.html
+++ b/src/main/resources/templates/JYPages/jyBoardPages/jyBoardDetail.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
 <h2>boardDetail</h2>
@@ -34,9 +35,37 @@
         </td>
     </tr>
 </table>
+
 <button onclick="back()">뒤로</button>
 <button th:if="${board.boardWriter == session.loginEmail}" onclick="board_update()">수정</button>
 <button th:if="${board.boardWriter == session.loginEmail}" onclick="board_delete()">삭제</button>
+
+<div class="container" id="comment-write">
+    <input type="text" id="comment-writer" placeholder="작성자" th:value="${session.loginEmail}" readonly>
+    <input type="text" id="comment-contents" placeholder="내용">
+    <button onclick="comment_write()">댓글작성</button>
+</div>
+<div class="container" id="comment-list">
+    <div th:if="${commentList == null}">
+        <p>작성된 댓글이 없습니다.</p>
+    </div>
+    <div th:unless="${commentList == null}">
+        <table class="table">
+            <tr>
+                <th>id</th>
+                <th>writer</th>
+                <th>contents</th>
+                <th>date</th>
+            </tr>
+            <tr th:each="comment: ${commentList}">
+                <td th:text="${comment.id}"></td>
+                <td th:text="${comment.commentWriter}"></td>
+                <td th:text="${comment.commentContents}"></td>
+                <td th:text="${comment.createdAt}"></td>
+            </tr>
+        </table>
+    </div>
+</div>
 </body>
 <script th:inline="javascript">
     const id = [[${board.id}]];
@@ -54,6 +83,50 @@
 
     const board_delete = () => {
         location.href = "/jy/board/delete/" + id + "?page=" + page + "&type=" + type + "&q=" + q;
+    }
+
+    const comment_list = (commentList) => {
+        console.log("댓글 목록 함수", commentList);
+        const resultArea = document.querySelector("#comment-list");
+        let output = "        <table class=\"table\">\n" +
+            "            <tr>\n" +
+            "                <th>id</th>\n" +
+            "                <th>writer</th>\n" +
+            "                <th>contents</th>\n" +
+            "                <th>date</th>\n" +
+            "            </tr>";
+        for (let i in commentList) {
+            output += "<tr>\n" +
+                "                <td>" + commentList[i].id + "</td>\n" +
+                "                <td>" + commentList[i].commentWriter + "</td>\n" +
+                "                <td>" + commentList[i].commentContents + "</td>\n" +
+                "                <td>" + commentList[i].createdAt + "</td>\n" +
+                "            </tr>";
+        }
+        output += "</table>";
+        resultArea.innerHTML = output;
+    }
+
+    const comment_write = () => {
+        const writer = document.querySelector("#comment-writer").value;
+        const contents = document.querySelector("#comment-contents").value;
+        const boardId = [[${board.id}]];
+        axios({
+            method: "post",
+            url: "/jy/comment/save",
+            data: {
+                commentWriter: writer,
+                commentContents: contents,
+                boardId: boardId
+            }
+        }).then(res => {
+            console.log("res", res);
+            console.log("댓글 목록", res.data);
+            document.querySelector("#comment-contents").value = "";
+            comment_list(res.data);
+        }).catch(err => {
+            console.log("err", err);
+        });
     }
 </script>
 </html>
