--- a/src/main/resources/templates/YHPages/yhBoardPages/yhDetail.html
+++ b/src/main/resources/templates/YHPages/yhBoardPages/yhDetail.html
@@ -63,25 +63,26 @@
     <input type="button" onclick="saveComment()" value="등록하기">
 </div>
 <div id="commentResult">
-        <table class="table">
-            <thead>
-            <tr>
-                <th>번호</th>
-                <th>내용</th>
-                <th>작성자</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="comment: ${commentList}">
-                <td th:text="${comment.id}"></td>
-                <td th:text="${comment.commentContents}"></td>
-                <td th:text="${comment.commentWriter}"></td>
-            </tr>
-            </tbody>
-        </table>
+    <table class="table">
+        <thead>
+        <tr>
+            <th>번호</th>
+            <th>내용</th>
+            <th>작성자</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="comment: ${commentList}">
+            <td th:text="${comment.id}"></td>
+            <td th:text="${comment.commentContents}"></td>
+            <td th:text="${comment.commentWriter}"></td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 
 <script th:inline="javascript">
+
     const comment_list = (commentList) => {
         console.log("댓글 목록 함수", commentList);
         const commentResult = document.querySelector("#commentResult");
@@ -90,7 +91,6 @@
             "                <th>id</th>\n" +
             "                <th>writer</th>\n" +
             "                <th>contents</th>\n" +
-            "                <th>수정</th>\n" +
             "                <th>삭제</th>\n" +
             "            </tr>";
         for (let i in commentList) {
@@ -98,13 +98,13 @@
                 "                <td>" + commentList[i].id + "</td>\n" +
                 "                <td>" + commentList[i].commentWriter + "</td>\n" +
                 "                <td>" + commentList[i].commentContents + "</td>\n" +
-                "                <td>" + <button>삭제</button> + "</td>\n" +
-                "                <td>" + <button>수정</button> + "</td>\n" +
+                "                <td>  <button onclick='deleteComment()'>삭제</button>  </td>\n" +
                 "            </tr>";
         }
         output += "</table>";
         commentResult.innerHTML = output;
     }
+
     const saveComment = () => {
         const commentWriter = document.querySelector("#commentWriter");
         const commentContent = document.querySelector("#commentContent");
@@ -117,12 +117,13 @@
                 commentContents: commentContent.value,
                 boardId: boardId.value
             }
-        }).then(res => {
-            console.log("res", res);
-            const commentContent = document.querySelector("#commentContent");
-            commentContent.innerHTML = "";
-            comment_list(res.data);
-        }).catch(err => {
+        })
+            .then(res => {
+                console.log("res", res);
+                const commentContent = document.querySelector("#commentContent");
+                commentContent.innerHTML = "";
+                comment_list(res.data);
+            }).catch(err => {
             alert("등록실패!");
         })
     }
