--- a/src/main/resources/templates/KMPages/kmComponent/kmNav.html
+++ b/src/main/resources/templates/KMPages/kmComponent/kmNav.html
@@ -22,6 +22,10 @@
         <li id="navMenu3">
             <a href="/kmMember/list">회원목록</a>
         </li>
+        <li th:if="${session.loginEmail != null}" id="navMenu4">
+            <a href="/kmBoard/boardPaging" style="color: white;">페이징</a>
+        </li>
+
         <li class="login-area" id="login-area">
         </li>
 
@@ -30,18 +34,18 @@
 
 </body>
 <script th:inline="javascript">
-    const navmenu1 = document.getElementById("navMenu1");
-    const navmenu2 = document.getElementById("navMenu2");
-    const navmenu3 = document.getElementById("navMenu3");
-    const loginarea = document.getElementById("login-area");
+    const navMenu1 = document.getElementById("navMenu1");
+    const navMenu2 = document.getElementById("navMenu2");
+    const navMenu3 = document.getElementById("navMenu3");
+    const loginArea = document.getElementById("login-area");
     const loginEmail = [[${session.loginEmail}]];
     console.log(loginEmail);
     if (loginEmail.length != 0) {
-        loginarea.innerHTML = "<a href='/kmMember/mypage' style='color: white;'>" + loginEmail + "님 페이지가기</a>" +
+        loginArea.innerHTML = "<a href='/kmMember/mypage' style='color: white;'>" + loginEmail + "님 페이지가기</a>" +
             "<a href='/kmMember/logout' style='color: orange'>logout</a>";
-        navmenu1.innerHTML = "<a href='/kmBoard/save' style = 'color: yellow;'>글쓰기</a>";
-        navmenu2.innerHTML = "<a href='/kmBoard/myBoard' style = 'color: yellow;'>내글보기</a>";
-        navmenu3.innerHTML = "<a href='/kmBoard/boardList' style = 'color: yellow;'>글목록</a>";
+        navMenu1.innerHTML = "<a href='/kmBoard/save' style = 'color: yellow;'>글쓰기</a>";
+        navMenu2.innerHTML = "<a href='/kmBoard/myBoard' style = 'color: yellow;'>내글보기</a>";
+        navMenu3.innerHTML = "<a href='/kmBoard/boardList' style = 'color: yellow;'>글목록</a>";
     } else {
         loginArea.innerHTML = "<a href='/login'>login</a>";
     }
