board paging ing(230616)!!

--- a/src/main/resources/static/css/kmCss/kmmain.css
+++ b/src/main/resources/static/css/kmCss/kmmain.css
@@ -30,6 +30,15 @@ ul {
     /*align-items: center;*/
     font-family: 'Noto Sans KR', sans-serif;
 }
+/*#nav {*/
+/*    display: flex;*/
+/*    padding: 10px 100px;*/
+/*    background-color: #363945;*/
+/*    font-weight: bold;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    font-family: 'Noto Sans KR', sans-serif;*/
+/*}*/
 /*#nav ul {*/
 /*    margin: 0px;*/
 /*}*/
