--- a/src/main/resources/templates/KMPages/kmBoardPages/kmBoardPaging.html
+++ b/src/main/resources/templates/KMPages/kmBoardPages/kmBoardPaging.html
@@ -7,83 +7,80 @@
 <div th:replace="KMPages/kmComponent/kmHeader"></div>
 <div th:replace="KMPages/kmComponent/kmNav"></div>
 <div id="section">
-    <div th:if="${boardList!=null}" id="board-list">
-        <table class="table table-hover">
-            <thead>
-            <tr>
-                <th scope="col">id</th>
-                <th scope="col">writer</th>
-                <th scope="col">title</th>
-                <th scope="col">date</th>
-                <th scope="col">hits</th>
-                <th scope="col">file</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="board:${boardList}">
-                <td th:text="${board.id}"></td>
-                <td th:text="${board.boardWriter}"></td>
-<!--                                                    page=${boardList.number+1}  현재 페이지 값-->
-                <td><a th:href="@{|/kmBoard/${board.id}?page=${boardList.number+1}&type=${type}&q=${q}|}"
-                       th:text="${board.boardTitle}"></a></td>
-                <td th:text="${board.boardCreatedAt}"></td>
-                <td th:text="${board.boardHits}"></td>
-                <td th:text="${board.boardFileAttached}"></td>
-            </tr>
-            </tbody>
-        </table>
-        <div class="container">
-            <ul class="pagination justify-content-center">
-                <!--   ============================== 처음페이지로 가기 ========================================================= -->
-                <li class="page-item">
-                    <!--첫페이지 요청 링크 /board?page=1 -->
-                    <a class="page-link" th:href="@{/kmBoard/boardPaging(page=1, type=${type}, q=${q})}">
-                        <span>First</span>
-                    </a>
-                </li>
-                <!--   ===================================== 전페이지로 가기===================================================== -->
-                <li th:class="${boardList.first} ? 'disabled'" class="page-item">
-                    <!--boardList.first: isFirst()
-                        boardList.number: getNumber()-->
-                    <a class="page-link"
-                       th:href="${boardList.first} ? '#' : @{/kmBoard/boardPaging(page=${boardList.number}, type=${type}, q=${q})}">
-                        <!-- 사용자 3페이지, number 2 /board?page=2 -->
-                        <span> < </span> <!-- < -->
-                    </a>
-                </li>
-                <!--   ========================================================================================================== -->
-                <!-- startPage ~ endPage 까지 숫자를 만들어주는 역할
-                       for(int page=startPage; page<=endPage; page++) -->
-                <li th:each="page: ${#numbers.sequence(startPage, endPage)}"
-                    th:class="${page == boardList.number + 1} ? 'page-item active'" class="page-item">
-                    <a class="page-link" th:text="${page}"
-                       th:href="@{/kmboard/boardPaging(page=${page}, type=${type}, q=${q})}"></a>
-                </li>
-                <!--   ========================================================================================================== -->
-                <!-- 다음 페이지 요청
+    <div class="container" id="paging-list">
+        <div th:if="${boardList != null}" id="board-list">
+            <table class="table table-hover">
+                <thead>
+                <tr>
+                    <th scope="col">id</th>
+                    <th scope="col">writer</th>
+                    <th scope="col">title</th>
+                    <th scope="col">date</th>
+                    <th scope="col">hits</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="board: ${boardList}">
+                    <td th:text="${board.id}"></td>
+                    <td th:text="${board.boardWriter}"></td>
+                    <td><a th:href="@{|/kmBoard/${board.id}?page=${boardList.number + 1}&type=${type}&q=${q}|}"
+                           th:text="${board.boardTitle}">제목</a></td>
+                    <td th:text="${board.boardCreatedAt}"></td>
+                    <td th:text="${board.boardHits}"></td>
+                </tr>
+                </tbody>
+            </table>
+
+            <div class="container">
+                <ul class="pagination justify-content-center">
+                    <li class="page-item">
+                        <!--첫페이지 요청 링크 /board?page=1 -->
+                        <a class="page-link" th:href="@{/kmBoard/boardPaging(page=1, type=${type}, q=${q})}">
+                            <span>First</span>
+                        </a>
+                    </li>
+
+                    <li th:class="${boardList.first} ? 'disabled'" class="page-item">
+                        <!--boardList.first: isFirst()
+                            boardList.number: getNumber()-->
+                        <a class="page-link"
+                           th:href="${boardList.first} ? '#' : @{/board/boardPaging(page=${boardList.number}, type=${type}, q=${q})}">
+                            <!-- 사용자 3페이지, number 2 /board?page=2 -->
+                            <span>prev</span> <!-- < -->
+                        </a>
+                    </li>
+
+                    <!-- startPage ~ endPage 까지 숫자를 만들어주는 역할
+                        for(int page=startPage; page<=endPage; page++) -->
+                    <li th:each="page: ${#numbers.sequence(startPage, endPage)}"
+                        th:class="${page == boardList.number + 1} ? 'page-item active'" class="page-item">
+                        <a class="page-link" th:text="${page}"
+                           th:href="@{/board/boardPaging(page=${page}, type=${type}, q=${q})}"></a>
+                    </li>
+                    <!-- 다음 페이지 요청
                         현재 3페이지를 보고 있다면 다음 페이지는 4페이지임.
                         getNumber() 값은 2임.
                         따라서 4페이지를 보고 싶다면 getNumber()+2를 해야 컨트롤러에 4를 요청할 수 있음. -->
-                <li th:class="${boardList.last} ? 'disabled'">
-                    <a class="page-link"
-                       th:href="${boardList.last} ? '#' : @{/kmboard/boardPaging(page=${boardList.number + 2}, type=${type}, q=${q})}">
-                        <!-- 사용자 3페이지, number 2 /board?page=4 -->
-                        <span>&gt;</span>
-                    </a>
-                </li>
-                <!--   ========================================================================================================== -->
-                <li class="page-item">
-                    <a class="page-link" th:href="@{/kmboard/boardPaging(page=${boardList.totalPages}, type=${type}, q=${q})}">
-                        <span>Last</span>
-                    </a>
-                </li>
+                    <li th:class="${boardList.last} ? 'disabled'">
+                        <a class="page-link"
+                           th:href="${boardList.last} ? '#' : @{/board/boardPaging(page=${boardList.number + 2}, type=${type}, q=${q})}">
+                            <!-- 사용자 3페이지, number 2 /board?page=4 -->
+                            <span>next</span>
+                        </a>
+                    </li>
 
-            </ul>
+                    <li class="page-item">
+                        <a class="page-link" th:href="@{/board/boardPaging(page=${boardList.totalPages}, type=${type}, q=${q})}">
+                            <span>Last</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div th:unless="${boardList != null}">
+            <h1>검색결과가 없습니다!!</h1>
         </div>
 
-    </div>
-    <div th:unless="${boardList!=null}">
-        <h1>검색 결과가 없습니다.</h1>
     </div>
 </div>
 <div th:replace="KMPages/kmComponent/kmFooter"></div>
