--- a/src/main/resources/templates/YHPages/yhComponent/yhHeader.html
+++ b/src/main/resources/templates/YHPages/yhComponent/yhHeader.html
@@ -76,6 +76,7 @@
                 </div>
             </div>
         </div>
+        <th:block th:replace="/YHPages/yhComponent/yhNav :: nav"></th:block>
         <script>
             const myPage = () => {
                 location.href = "/yhMember/myPage";
